--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass-embedded": "^1.83.4",
     "typescript": "~5.7.2",
     "vite": "^6.1.0"
   }
